# denavit-hartenberg-api

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: fastapi-app.yml
app/: docs.py  main.py  model.py  utils.py
tests/: test_main.py
