[tool.poetry]
name = "denavit-hartenberg"
version = "0.1.0"
description = ""
authors = ["Wesley Mendes <wesley@wesleymendes.com.br>"]

[tool.poetry.dependencies]
python = "3.9.7"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.910"
pytest-cov = "^2.12.1"
pytest-flake8 = "^1.0.7"
pytest-pythonpath = "^0.7.3"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
